# jukebox

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements_dev.txt
docs/: swagger.yaml
jukebox/: config.py  credit.py  log.py  player.py  queue.py
jukebox/discography/: __init__.py  exception.py
jukebox/service/: __init__.py  data.py  protocol.py
tests/: test_config.py  test_credit.py  test_player.py  test_queue.py
tests/test_discography/: test_discography.py
tests/test_service/: test_service.py
