[project]
name = "jukebox"
version = "0.0.0"
authors = []
description = "Interview take home project"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"